copy alignment example